# SolarSTATA

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  agent_core.py  ai_brain.py  app.py  docker-compose.yml  requirements.txt  solarstata.bat  solarstata.command  stats_engine.py
backend/: README.md  pyinstaller.spec  pyproject.toml  run_server.py
backend/src/solarstata/: __init__.py  config.py  main.py
backend/src/solarstata/api/: _jsonsafe.py  data.py  deps.py  export.py  graphs.py  health.py  stats.py  walkthroughs.py  workspace.py  ws.py
backend/src/solarstata/engine/: __init__.py  anova.py  binning.py  cld.py  compress.py  descriptive.py  diagnostics.py  dofile.py  factor.py  formatters.py  graphs.py  interpret.py  logit.py  postest.py  qualifiers.py  regress.py  results.py  tabstat.py  tabulate.py
backend/src/solarstata/io/: __init__.py  preflight.py  readers.py  writers.py
backend/src/solarstata/session/: __init__.py  middleware.py  models.py  staging.py  store.py
backend/src/solarstata/walkthroughs/: __init__.py
backend/src/solarstata/walkthroughs/datasets/: __init__.py  (+3 more)
backend/tests/: conftest.py  test_anova.py  test_cld.py  test_counts.py  test_desktop_session.py  test_diagnostics.py  test_dofile.py  test_factor.py  test_graphs_errorbars.py  test_health.py  test_interpret.py  test_io_roundtrip.py  test_logit.py  test_postest.py  test_preflight.py  test_qualifiers.py  test_regress.py  test_session.py  test_significance_brackets.py  test_smoke.py  test_summarize.py  test_tabstat.py  test_tabulate.py  test_workspace.py  test_xlsx_picker.py
(+94 files in other folders)
