[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarstata"
version = "3.0.0a1"
description = "SolarSTATA v3 backend — point-and-click Stata replica"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SolarSTATA contributors" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.18",
  "itsdangerous>=2.2",

  "duckdb>=1.1",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=18",
  "openpyxl>=3.1",
  "pyreadstat>=1.2",

  "scipy>=1.14",
  "statsmodels>=0.14",

  "plotly>=5.24",
  "jinja2>=3.1",
  "weasyprint>=63",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solarstata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
